--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+asyncpg://test_user:2532@db:5432/test_user_db
+sqlalchemy.url = ${DATABASE_URL}
+
 
 
 [post_write_hooks]
